fixed some typesetting issues and added personal references

--- a/algo_music/algo_music.tex
+++ b/algo_music/algo_music.tex
@@ -24,7 +24,8 @@
 
 \author{} 
 \subtitle{A proposito di musica, algoritmi \\ e riappropriazione rivoluzionaria\footref{altraparola}}
-\titlehead{Neurob: \url{https://livellosegreto.it/web/@neurob}, \\ matrix: @neurob:matrix.org, \\ mail: \href{mailto:neurob@distruzione.org}{neurob@distruzione.org} }
+\titlehead{
+	social media: \url{https://livellosegreto.it/web/@neurob}, \\ matrix: @neurob:matrix.org, \\ mail: \href{mailto:neurob@distruzione.org}{neurob@distruzione.org} }
 \date{}
 
 \begin{document}
