--- a/algo_music/algo_music.tex
+++ b/algo_music/algo_music.tex
@@ -32,7 +32,7 @@
 	\maketitle
 	
 	
-	\footnotetext{Il presente articolo è stato pubblicato sul num. 7 (Giugno 2022) della rivista \emph{Altraparola}.  (\url{https://www.altraparolarivista.it/})\label{altraparola}}
+	\footnotetext{Il presente articolo è stato pubblicato sul num. 7 (Giugno 2022) della rivista \emph{Altraparola}. \label{altraparola}}
 	
 	L'idea che l'arte rifletta le contraddizioni della società in quanto sistema complesso non è certo qualcosa di originale. Un'interpretazione dell'idea hegeliana che vede l'art come la <<manifestazione sensibile di ciò che è supremo>>, e le <<opere della bella arte come il primo anello di conciliazione tra ciò che è semplicemente esterno \omissis{} ed il puro pensiero>> \footnote{G.W.F. Hegel, \emph{Estetica}, a cura di N. Merker, Milano 1978, pp. 13-14.} ci obbliga dunque a riflettere sull'arte in quanto espressione sensibile delle interpretazioni astratte del mondo, le quali -- tuttavia -- in una prospettiva immanentistica sono nel \emph{mondo stesso} e nell'atto della ragione che tenta di conoscerlo, in un continuo processo di reciproco adeguamento. Ciò significa, di conseguenza, che le categorie del sociale che facciamo rientrare nel senso comunque, e che si manifestano con grande evidenza, meritano parimenti un approfondimenti dal punto di vista estetico, per ricercarne la corrispondenza nella dimensione dell'arte. Nel capitalismo contemporaneo si assiste ad un doppio movimento contraddittorio: da un lato vi è un progressivo ed esasperante isolamento del singolo, che viene ricondotto sempre più alla sua natura di \emph{uno irrelato}, rispetto al contesto di mediazioni, dall'altro punto di vista, però, non si può negare una sempre più crescente spersonalizzazione dei processi produttivi, una sorta di scomparsa del soggetto nel processo di lavoro, in cui l'atto stesso del fare e del produrre, da sempre identificato come ciò che può dar senso all'essere individuale e sociale dell'uomo\footnote{Tesi condivisa, oltre che dalla classica visione della teoria marxista, anche dall'antropologo contemporaneo David Graeber, che definisce il \emph{non aver nulla da fare} come estremamente odioso, tanto che smentisce vigorosamente l'ipotesi secondo cui <<if humans are offered the option to be parasites, of course they'll take it>>, ribadendo che <<human beings certainly tend to ranke over what they consider excessive or degrading work;}.
 	
