fixed some typographical issue

--- a/algo_music/algo_music.tex
+++ b/algo_music/algo_music.tex
@@ -51,7 +51,7 @@
 	A questo punto del discorso, tuttavia, sembra quasi non esserci alcun dubbio sul progressivo processo di spersonalizzazione del soggetto nel processo creativo e nell'atto compositivo: sembra quasi voler dare ragione ad Adorno. Per il filosofo francofortese questo processo di perdita dell'umano veniva espresso nei termini di un \emph{estraneazione dell'uomo nei confronti di se stesso}, completamente smarrito nei meandri dello \emph{spirito reificato}\footnote{<<Identificando in anticipo il mondo matematizzato fino in fondo con la verità, l'illuminismo si crede al sicuro dal ritorno del mito. Esso identifica il pensiero con la matematica. Essa viene, per così dire, emancipata, elevata ad istanza assoluta. \omissis L'estraneazione degli uomini dagli oggetti dominati non è il solo prezzo pagato per il dominio: con la reificazione dello spirito sono stati stregati anche i rapporti interni fra gli uomini, anche quelli di ognuno con se stesso>>. Cfr. M. Horkheimer, Th.W. Adorno, \textit{Dialettica dell'Illuminismo}, trad. R. Solmi, Einaudi, Torino, 2010, pp. 32-36.}, 
 	dominato da un pensiero matematizzante che aveva spogliato l'uomo di ogni agentività, e l'aveva fatto ripiombare nella superstizione e nel mito.
 	
-	Trattare la questione soltanto da questo punto di vista sarebbe tuttavia estremamente parziale e non terrebbe conto di alcuni aspetti molto interessanti in relazione ai rapporti fra la soggettività dell'uomo-artista e le sfumature logico-formali del pensiero. Le notazioni algoritmiche, che spesso e volentieri si esprimono sotto la forma di linguaggi di programmazione\footnote{Si può trattare sia di veri e propri linguaggi di programmazione dedicati esclusivamente alla composizione musicale come Csound, ChucK, SuperCollider, oppure di linguaggi di programmazione già esistenti utilizzati ai fini della composizione. Alcuni di questi sono utilizzati anche nella didattica (sia della teoria musicale che dell'informatica), come  SonicPi (\href{https://sonic-pi.net}{link})},
+	Trattare la questione soltanto da questo punto di vista sarebbe tuttavia estremamente parziale e non terrebbe conto di alcuni aspetti molto interessanti in relazione ai rapporti fra la soggettività dell'uomo-artista e le sfumature logico-formali del pensiero. Le notazioni algoritmiche, che spesso e volentieri si esprimono sotto la forma di linguaggi di programmazione\footnote{Si può trattare sia di veri e propri linguaggi di programmazione dedicati esclusivamente alla composizione musicale come Csound, ChucK, SuperCollider, oppure di linguaggi di programmazione già esistenti utilizzati ai fini della composizione. Alcuni di questi sono utilizzati anche nella didattica (sia della teoria musicale che dell'informatica), come  SonicPi (\href{https://sonic-pi.net}{link}).},
 	entrano in un rapporto dialettico con l'esecutore-compositore nella pratica del \emph{live coding}. Il \emph{live coding}, come si evince dallo stesso nome, è la pratica di scrivere codice finalizzato alla produzione musicale, modificandolo \emph{on-the-fly}, improvvisando (sia da soli che in collaborazione con altri performer): il processo di creazione di codice è importante tanto quanto il prodotto musicale, tanto che è prassi proiettare alle spalle del \textit{performer} quanto viene scritto ed eseguito sul laptop\footnote{<<Given the prominence of code projection and other forms of algorithmic visualization during live coding performance -- enabling audiences to form, at least to some degree, an appreciation of the music with reference to the processes by which it is being generated -- it is reasonable to assume that means of generation are integral to the aesthetic values of live coded mosical performance>>. Cfr. G.A. Wiggins and J. Forth, \textit{Computational Creativity and Live Algorithms}, in \textit{Oxford Handbook of Algorithmic Music}, ed. cit., p. 270.}. 
 	A rimarcare l'importanza del processo, che diviene predominante rispetto alla composizione in sé, è la possibilità di performance collettive e collaborative\footnote{<<\omissis in the case of collaborative live coding, code sharing is an important part of the communication, understanding each other's thoughts, and exchanging ideas. Most of the times, the collaboration in this live coding practice occurs in real time, due to its live nature and asynchronous communication being limited>>. Cfr. S.W. Lee, G. Essl, \textit{Live Writing: Asynchronous Playback of Live Coding and Writing}, p. 74 in A. McLean, T. Magnusson, K. Ng, S. Knotts, J. Armitage (ed.), published by ICSRiM, School of Music, University of Leeds, 2015.}. 
 	Riteniamo che lo stesso spirito e lo stesso afflato, nonché gli stessi nodi concettuali trasposti sul piano della performance artistica, si ritrovino nel documento più emblematico di tutto il movimento \emph{algorave}, cioè il Manifesto TOPLAP\footnote{TOPLAP è il nome dell'organizzazione informale costituitasi nel febbraio 2004 allo scopo di riunire le diverse comunità che si dedicavano alla pratica del \emph{live coding}.}. 
